- Updated penaltyRates - Fixed childrens